# hexcaliper-soonstone

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  soonstone_roadmap.md
alembic/: env.py
alembic/versions/: 0001_initial.py  06599a8f6a50_add_nws_forecasts_table_and_station_nws_.py  354ae86c03cd_allow_null_raw_metar_and_raw_taf_for_.py
scripts/: capture_fixtures.py
soonstone/: __main__.py  app.py  config.py  db.py  health.py  logging.py  models.py  scheduler.py
soonstone/api/: airsigmets.py  health.py  index.py  snapshot.py  stations.py
soonstone/ingestion/: _bbox.py  airsigmets.py  awc_client.py  iem_radar.py  metars.py  nws.py  nws_client.py  prune.py  radar.py  results.py  stations.py  tafs.py
soonstone/parsers/: metar_parser.py  taf_parser.py
soonstone/static/: index.html
soonstone/verification/: snapshot.py  taf_resolve.py
tests/: conftest.py  test_api_airsigmets.py  test_api_health.py  test_api_index.py  test_api_snapshot.py  test_api_stations.py  test_api_stations_with_category.py  test_app.py  test_awc_client.py  test_db_pragmas.py  test_health.py  test_iem_radar.py  test_ingestion_airsigmets.py  test_ingestion_metars.py  test_ingestion_nws.py  test_ingestion_prune.py  test_ingestion_radar.py  test_ingestion_stations.py  test_ingestion_tafs.py  test_logging.py  test_metar_parser.py  test_models_migration.py  test_nws_client.py  test_scheduler.py  test_snapshot.py  test_taf_parser.py  test_taf_resolve.py
tests/fixtures/metars/: KEYW_metar.txt  KJAX_metar.txt  (+4 more)
(+8 files in other folders)
