[project]
name = "soonstone"
version = "0.0.1"
description = "Self-hosted forecast verification: METAR vs TAF convergence visualizer."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "requests>=2.31",
    "metar>=1.11",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests-mock>=1.12",
    "ruff>=0.5",
]

[project.scripts]
soonstone = "soonstone.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soonstone*"]

[tool.ruff]
line-length = 100
target-version = "py311"
